Updated interface and login/sign in

--- a/css/login.css
+++ b/css/login.css
@@ -1,176 +1,252 @@
-style* { margin: 0 auto; font-family: sans-serif; }
 
-body { margin: 0 auto; }
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-header {                                    /*Header*/
-	height: 70px;                         
-	background-color: #3e739d;
-	border-bottom: 1px solid #494949;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-header > h1 {                               /*Header text?*/
-	width: calc(100% - 160px);
-	text-align: center;
-	font-size: 20px;
-	color: white;
-}
-header > .top {                              
-	position: absolute;
-	left: 20px;
-}
-header > .top a.menu_icon i {               /*Menu on the side */
-	color: #000;
-	font-size: 40px;
-	padding-top: 5px;
-	transition: .2s ease;
-}
-header > .top a.menu_icon:hover i {        /*When you hover the menu icon, it changes colour*/
-	color: #fff;
-}
-nav.menu {                                 /*The menu tab colour*/
-	width: 300px;
-	min-height: calc(100vh - 121px);
-	background-color: #03a9f4;
-	position: absolute;
-	left: -300px;
-	transition: .3s all;
-}
-nav.menu > a {                             /*Menu text*/
-    display: block;
-    padding: 5px;
-    margin: 15px 0 0px 20px;
-    color: #494949;
-    text-transform: uppercase;
-}
-
-main {
-	width: 100%;
-	padding: 30px;
+* {
 	box-sizing: border-box;
 }
-footer {                                  /*Footer*/
-	height: 50px;
-	background-color: #494949;
-	color: #fff;
+
+body {
+	background: #f6f5f7;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+	height: 100vh;
+	margin: -20px 0 50px;
+}
+
+h1 {
+	font-weight: bold;
+	margin: 0;
+}
+
+h2 {
+	text-align: center;
+}
+
+p {
+	font-size: 14px;
+	font-weight: 100;
+	line-height: 20px;
+	letter-spacing: 0.5px;
+	margin: 20px 0 30px;
+}
+
+span {
+	font-size: 12px;
+}
+
+a {
+	color: #333;
+	font-size: 14px;
+	text-decoration: none;
+	margin: 15px 0;
+}
+
+button {
+	border-radius: 20px;
+	border: 1px solid #FF4B2B;
+	background-color: #FF4B2B;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+}
+
+button:active {
+	transform: scale(0.95);
+}
+
+button:focus {
+	outline: none;
+}
+
+button.ghost {
+	background-color: transparent;
+	border-color: #FFFFFF;
+}
+
+form {
+	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	bottom: 0;
-	position: fixed;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 100%;
+	text-align: center;
+}
+
+input {
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
 	width: 100%;
 }
 
-.menu_show {
-	left: 0!important;
+.container {
+	background-color: #fff;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+	width: 768px;
+	max-width: 100%;
+	min-height: 480px;
 }
 
-@media screen and (max-width: 425px) {
-	header h1 {
-		font-size: 16px;
+.form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+	left: 0;
+	width: 50%;
+	z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+	transform: translateX(100%);
+}
+
+.sign-up-container {
+	left: 0;
+	width: 50%;
+	opacity: 0;
+	z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+	transform: translateX(100%);
+	opacity: 1;
+	z-index: 5;
+	animation: show 0.6s;
+}
+
+@keyframes show {
+	0%, 49.99% {
+		opacity: 0;
+		z-index: 1;
+	}
+	
+	50%, 100% {
+		opacity: 1;
+		z-index: 5;
 	}
 }
-@media screen and (max-width: 360px) {
-	nav.menu {
-		width: 100%;
-		left: -100%; 
-	}
+
+.overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	transition: transform 0.6s ease-in-out;
+	z-index: 100;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
-  }
-  html,body{
-    display:grid;
-    height:100vh;
-    place-items:center;
-    background: #be2edd;
-  }
-  .main_div{
-    width: 365px;
-    background: #fff;
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-  }
-  .main_div .title{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 600;
-  }
-  form {
-    margin-top: 25px;
-  }
-  form .input_box{
-    height: 50px;
-    width: 100%;
-    position: relative;
-    margin-top: 15px;
-  }
-  .input_box input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
-    padding-left: 45px;
-    font-size: 17px;
-    transition: all 0.3s ease;
-  }
-  .input_box input:focus{
-    border-color: #be2edd;
-  }
-  .input_box .icon{
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-    color: grey;
-  }
-  form .option_div{
-    margin-top: 5px;
-    display: flex;
-    justify-content: space-between;
-  }
-  .option_div .check_box{
-    display: flex;
-    align-items: center;
-  }
-  .option_div span{
-    margin-left: 5px;
-    font-size: 16px;
-    color: #333;
-  }
-  .option_div .forget_div a{
-    font-size: 16px;
-    color: #be2edd;
-  }
-  .button input{
-    padding-left: 0;
-    background: #be2edd;
+
+.container.right-panel-active .overlay-container{
+	transform: translateX(-100%);
+}
+
+.overlay {
+	background: #FF416C;
+	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+  	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  	transform: translateX(50%);
+}
+
+.overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+	transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+	transform: translateX(0);
+}
+
+.overlay-right {
+	right: 0;
+	transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+	transform: translateX(20%);
+}
+
+.social-container {
+	margin: 20px 0;
+}
+
+.social-container a {
+	border: 1px solid #DDDDDD;
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5px;
+	height: 40px;
+	width: 40px;
+}
+
+footer {
+    background-color: #222;
     color: #fff;
-    border: none;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 0.3s linear;
-  }
-  .button input:hover{
-    background: #a720c5;
-  }
-  form .sign_up{
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
     text-align: center;
-    margin-top: 25px;
-  }
-  .sign_up a{
-    color: #be2edd;
-  }
-  form a{
+    z-index: 999;
+}
+
+footer p {
+    margin: 10px 0;
+}
+
+footer i {
+    color: red;
+}
+
+footer a {
+    color: #3c97bf;
     text-decoration: none;
-  }
-  form a:hover{
-    text-decoration: underline;
-  }
+}
