--- a/css/game.css
+++ b/css/game.css
@@ -1,79 +1,69 @@
-style* { margin: 0 auto; font-family: sans-serif; }
-
-body { margin: 0 auto; }
-
-header {                                    /*Header*/
-	height: 70px;                         
-	background-color: #4646A0;
-	border-bottom: 1px solid #494949;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-header > h1 {                               /*Header text?*/
-	width: calc(100% - 160px);
-	text-align: center;
-	font-size: 20px;
-	color: white;
-}
-header > .top {                              
-	position: absolute;
-	left: 20px;
-}
-header > .top a.menu_icon i {               /*Menu on the side */
-	color: #000;
-	font-size: 40px;
-	padding-top: 5px;
-	transition: .2s ease;
-}
-header > .top a.menu_icon:hover i {        /*When you hover the menu icon, it changes colour*/
-	color: #fff;
-}
-nav.menu {                                 /*The menu tab colour*/
-	width: 300px;
-	min-height: calc(100vh - 121px);
-	background-color: #03a9f4;
-	position: absolute;
-	left: -300px;
-	transition: .3s all;
-}
-nav.menu > a {                             /*Menu text*/
-    display: block;
-    padding: 5px;
-    margin: 15px 0 0px 20px;
-    color: #494949;
-    text-transform: uppercase;
+:root {
+    --primary-color: rgba(13, 110, 139, 0.75);
+    --overlay-color: rgba(24,39, 51, 0.85);
+    --menu-speed: 0.75s;
 }
 
-main {
-	width: 100%;
-	padding: 30px;
-	box-sizing: border-box;
-}
-footer {                                  /*Footer*/
-	height: 50px;
-	background-color: #EBCE16;
-	color: #fff;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	bottom: 0;
-	position: fixed;
-	width: 100%;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.menu_show {
-	left: 0!important;
+.container{
+    max-width: 960px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0.3rem;
 }
 
-@media screen and (max-width: 425px) {
-	header h1 {
-		font-size: 16px;
-	}
+.showcase{
+    background-color: var(--primary-color);
+    color: #EBCE16;
+    height: 100vh;
+    position: relative;
 }
-@media screen and (max-width: 360px) {
-	nav.menu {
-		width: 100%;
-		left: -100%; 
-	}
+
+.showcase:before {
+    content:'';
+    background: url('../image/NP.jpg') no-repeat center
+    center/cover;
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.showcase .showcase-inner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+}
+
+.showcase h1{
+    font-size: 4rem;
+}
+
+.showcase p{
+    font-size:1.3rem;
+}
+
+.btn{
+    display: inline-block;
+    border: none;
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 0.75rem 1.5rem;
+    margin-top: 1rem;
+    text-decoration: none; 
+    transition: opacity 1s ease-in;
+}
+
+.btn:hover{
+    opacity: 0.7;
 }
