--- a/css/contact.css
+++ b/css/contact.css
@@ -1,69 +1,100 @@
-:root {
-    --primary-color: rgba(13, 110, 139, 0.75);
-    --overlay-color: rgba(24,39, 51, 0.85);
-    --menu-speed: 0.75s;
-}
-
 *{
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+}
+
+body{
+    background: #92bde7;
+    color: #485e74;
+    line-height: 1.6;
+    font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 1em;
 }
 
 .container{
-    max-width: 960px;
-    margin: auto;
-    overflow: hidden;
-    padding: 0.3rem;
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em;
 }
 
-.showcase{
-    background-color: var(--primary-color);
-    color: #EBCE16;
-    height: 100vh;
-    position: relative;
+ul{
+    list-style: none;
+    padding: 0;
 }
 
-.showcase:before {
-    content:'';
-    background: url('../image/NP.jpg') no-repeat center
-    center/cover;
-    position:absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-.showcase .showcase-inner{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.brand{
     text-align: center;
-    height: 100%;
 }
 
-.showcase h1{
-    font-size: 4rem;
+.wrapper{
+    box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
 }
 
-.showcase p{
-    font-size:1.3rem;
+.wrapper > *{
+    padding: 1em;
 }
 
-.btn{
-    display: inline-block;
-    border: none;
-    background-color: var(--primary-color);
+.company-info{
+    background: #c9e6ff;
+}
+
+.company-info h3 .company-info ul{
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+.contact{
+    background: #f9feff;
+}
+
+.contact form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.contact form label{
+    display: block;
+}
+
+.contact form p{
+    margin:0;
+}
+
+.contact form .full{
+    grid-column: 1 / 3;
+}
+
+.contact form button, .contact form input, .contact form textarea{
+    width: 100%;
+    padding: 1em;
+    border: 1px solid #c9e6ff;
+}
+
+.contact form button{
+    background: #c9e6ff;
+    border: 0;
+    text-transform: uppercase;
+}
+
+.contact form button:hover.contact form button:focus{
+    background:#92bde7;
     color: #fff;
-    padding: 0.75rem 1.5rem;
-    margin-top: 1rem;
-    text-decoration: none; 
-    transition: opacity 1s ease-in;
+    outline: 0;
+    transition: background-color 2s ease-out;
 }
 
-.btn:hover{
-    opacity: 0.7;
+/* media queries */
+@media(min-width:700px){
+    .wrapper{
+        display: grid;
+        grid-template-columns: 1fr 2fr
+    }
+}
+.wrapper > *{
+    padding: 2em;
+}
+
+.company-info h3, .company-info ul, .brand{
+    text-align: left;
 }
