--- a/css/cart.css
+++ b/css/cart.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: rgba(13, 110, 139, 0.75);
+    --primary-color: rgba(13, 110, 139, 0.50);
     --overlay-color: rgba(24,39, 51, 0.85);
     --menu-speed: 0.75s;
 }
@@ -26,7 +26,7 @@
 
 .showcase:before {
     content:'';
-    background: url('../image/NP.jpg') no-repeat center
+    background: #fff no-repeat center
     center/cover;
     position:absolute;
     top: 0;
