--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@
 
 body{
     background: #92bde7;
-    color: #485e74;
+    color: #000000;
     line-height: 1.6;
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 1em;
