--- a/css/game.css
+++ b/css/game.css
@@ -11,7 +11,7 @@
 }
 
 .container{
-    max-width: 960px;
+    max-inline-size: 960px;
     margin: auto;
     overflow: hidden;
     padding: 0.3rem;
@@ -24,31 +24,31 @@
     font-family: "Poppins", sans-serif;
   }
   body {
-    height: 100vh;
+    block-size: 100vh;
     background: linear-gradient(135deg, #c3a3f1, #6414e9);
   }
   .wrapper {
-    width: 90%;
-    max-width: 34.37em;
-    max-height: 90vh;
+    inline-size: 90%;
+    max-inline-size: 34.37em;
+    max-block-size: 90vh;
     background-color: #ffffff;
     position: absolute;
     transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
+    inset-block-start: 50%;
+    inset-inline-start: 50%;
     padding: 3em;
     border-radius: 1em;
     box-shadow: 0 4em 5em rgba(27, 8, 53, 0.2);
   }
   .container {
     position: relative;
-    width: 100%;
-    height: 100%;
+    inline-size: 100%;
+    block-size: 100%;
   }
   #wheel {
-    max-height: inherit;
-    width: inherit;
-    top: 0;
+    max-block-size: inherit;
+    inline-size: inherit;
+    inset-block-start: 0;
     padding: 0;
   }
   @keyframes rotate {
@@ -59,10 +59,10 @@
   #spin-btn {
     position: absolute;
     transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    height: 26%;
-    width: 26%;
+    inset-block-start: 50%;
+    inset-inline-start: 50%;
+    block-size: 26%;
+    inline-size: 26%;
     border-radius: 50%;
     cursor: pointer;
     border: 0;
@@ -75,23 +75,23 @@
   }
   img {
     position: absolute;
-    width: 4em;
-    top: 45%;
-    right: -8%;
+    inline-size: 4em;
+    inset-block-start: 45%;
+    inset-inline-end: -8%;
   }
   #final-value {
     font-size: 1.5em;
     text-align: center;
-    margin-top: 0;
+    margin-block-start: 0;
     color: #202020;
     font-weight: 500;
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-inline-size: 768px) {
     .wrapper {
       font-size: 12px;
     }
     img {
-      right: -5%;
+      inset-inline-end: -5%;
     }
   }
 
@@ -101,7 +101,7 @@
     background-color: var(--primary-color);
     color: #fff;
     padding: 0.75rem 1.5rem;
-    margin-top: 1rem;
+    margin-block-start: 1rem;
     text-decoration: none; 
     transition: opacity 1s ease-in;
 }
