--- a/css/contact.css
+++ b/css/contact.css
@@ -106,3 +106,48 @@ ul{
     text-align: left;
 }
 
+@media (max-inline-size: 1080px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
+@media (max-inline-size: 400px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
+@media (max-inline-size: 360px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
