--- a/css/login.css
+++ b/css/login.css
@@ -253,4 +253,91 @@ footer a {
     text-decoration: none;
 }
 
+@media (max-width: 500px){
+.container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+    position: relative;
+    overflow: hidden;
+    inline-size: 300px;
+    max-inline-size: 100%;
+    min-block-size: 400px;
+}
 
+
+p {
+    font-size: 10px;
+    font-weight: 100;
+    line-height: 15px;
+    letter-spacing: 0;
+    margin: 10px 0 20px;
+}
+
+h1 {
+    display: block;
+    font-size: 1.2em;
+    margin-block-start: 3em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+form {
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 10px;
+    block-size: 100%;
+    text-align: center;
+}
+
+}
+
+@media (max-inline-size: 1080px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
+@media (max-inline-size: 400px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
+@media (max-inline-size: 360px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
