--- a/css/shop.css
+++ b/css/shop.css
@@ -243,6 +243,22 @@ header{
 	.shop{
 		margin-top: 2rem !important;
 	}
+	.logo {
+		font-size: 1.5rem;
+		width: 450px;
+	}
+	.menu-wrap .menu > div {
+		background: var(--overlay-color);
+		border-radius: 50%;
+		width: 200vw;
+		height: 250vw;
+		display: flex;
+		flex: none;
+		align-items: center;
+		justify-content: center;
+		transform: scale(0);
+		transition: all 0.4s ease;
+	}
 }
 
 @media (max-width: 400px){
@@ -255,6 +271,22 @@ header{
 	.cart {
 		width: 320px;
 	}
+	.logo {
+		font-size: 1.5rem;
+		width: 450px;
+	}
+	.menu-wrap .menu > div {
+		background: var(--overlay-color);
+		border-radius: 50%;
+		width: 200vw;
+		height: 250vw;
+		display: flex;
+		flex: none;
+		align-items: center;
+		justify-content: center;
+		transform: scale(0);
+		transition: all 0.4s ease;
+	}
 }
 
 @media (max-width: 360px){
@@ -263,5 +295,21 @@ header{
 	}
 	.cart{
 		width: 280px;
+	}
+	.logo {
+		font-size: 1.5rem;
+		width: 450px;
+	}
+	.menu-wrap .menu > div {
+		background: var(--overlay-color);
+		border-radius: 50%;
+		width: 200vw;
+		height: 250vw;
+		display: flex;
+		flex: none;
+		align-items: center;
+		justify-content: center;
+		transform: scale(0);
+		transition: all 0.4s ease;
 	}
 }
