--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 
 .container{
-    max-width: 960px;
+    max-inline-size: 960px;
     margin: auto;
     overflow: hidden;
     padding: 0.3rem;
@@ -23,7 +23,7 @@
 .showcase{
     background-color: var(--primary-color);
     color: #ffffff;
-    height: 100vh;
+    block-size: 100vh;
     position: relative;
 }
 
@@ -32,10 +32,10 @@
     background: #000000 no-repeat center
     center/cover;
     position:absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    inset-block-start: 0;
+    inset-inline-start: 0;
+    inline-size: 100%;
+    block-size: 100%;
     z-index: -1;
 }
 
@@ -45,7 +45,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 100%;
+    block-size: 100%;
 }
 
 .showcase h1{
@@ -62,11 +62,69 @@
     background-color: var(--primary-color);
     color: #fff;
     padding: 0.75rem 1.5rem;
-    margin-top: 1rem;
+    margin-block-start: 1rem;
     text-decoration: none; 
     transition: opacity 1s ease-in;
 }
 
 .btn:hover{
     opacity: 0.7;
+}
+
+.menu-wrap .menu > div {
+    background: var(--overlay-color);
+    border-radius: 50%;
+    width: 200vw;
+    height: 500vw;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+}
+
+@media (max-inline-size: 1080px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
+@media (max-inline-size: 400px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+}
+
+@media (max-inline-size: 360px){
+	.menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 250vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
 }
