--- a/css/game.css
+++ b/css/game.css
@@ -1,143 +1,87 @@
-:root {
-    --primary-color: rgba(13, 110, 139, 0.50);
-    --overlay-color: rgba(24,39, 51, 0.85);
-    --menu-speed: 0.75s;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+body{
+  height: 150vh;
+  background: linear-gradient(135deg, #c3a3f1, 
+  #6414e9);
+}
+
+.wrapper{
+  width: 90%;
+  max-width: 34.37em;
+  max-height: 90vh;
+  background-color: #ffffff;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  padding: 3em;
+  border-radius: 1em;
+  box-shadow: 0 4em 5em rgba(27,8,53, 0.2);
 }
 
 .container{
-    max-inline-size: 960px;
-    margin: auto;
-    overflow: hidden;
-    padding: 0.3rem;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  body {
-    block-size: auto;
-    background: #a3e7f1;
-  }
-
-  
-  .wrapper {
-    inline-size: 500px;
-    max-inline-size: 34.37em;
-    max-block-size: 100vh;
-    background-color: #ffffff;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    inset-block-start: 50%;
-    inset-inline-start: 50%;
-    padding: 3em;
-    border-radius: 1em;
-    box-shadow: 0 4em 5em rgb(27 8 53 / 20%);
-}
-
-
-  .container {
-    position: relative;
-    inline-size: 100%;
-    block-size: 100%;
-  }
-  #wheel {
-    max-block-size: inherit;
-    inline-size: inherit;
-    inset-block-start: 0;
-    padding: 0;
-  }
-  @keyframes rotate {
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  #spin-btn {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    inset-block-start: 50%;
-    inset-inline-start: 50%;
-    block-size: 26%;
-    inline-size: 26%;
-    border-radius: 50%;
-    cursor: pointer;
-    border: 0;
-    background: radial-gradient(#7b1cc4 50%, #112397 85%);
-    color: #ffffff;
-    text-transform: uppercase;
-    font-size: 1.8em;
-    letter-spacing: 0.1em;
-    font-weight: 600;
-  }
-  img {
-    position: absolute;
-    inline-size: 4em;
-    inset-block-start: 45%;
-    inset-inline-end: -8%;
-  }
-
-  .image1 {
-    position: relative;
-    inline-size: 15em;
-    inset-block-start: 45%;
-    inset-inline-end: -8%;
-  }
-
-  #final-value {
-    font-size: 1.5em;
-    text-align: center;
-    margin-block-start: 0;
-    color: #202020;
-    font-weight: 500;
-  }
-  @media screen and (max-inline-size: 768px) {
-    .wrapper {
-      font-size: 12px;
-    }
-    img {
-      inset-inline-end: -5%;
-    }
-  }
-
-.btn{
-    display: inline-block;
-    border: none;
-    background-color: var(--primary-color);
-    color: #fff;
-    padding: 0.75rem 1.5rem;
-    margin-block-start: 1rem;
-    text-decoration: none; 
-    transition: opacity 1s ease-in;
-}
-
-.btn:hover{
-    opacity: 0.7;
-}
-
-.container5 {
-  height: 0px;
-  left: 400px;
   position: relative;
   width: 100%;
-  top: 400px;
+  height: 100%;
 }
 
-.column {
-  float: left;
-  width: 0;
+#wheel{
+  max-height: inherit;
+  width: inherit;
+  top: 0;
+  padding: 0;
 }
 
-.column1 {
-  float: left;
-  width: 0;
+@keyframes rotate{
+  100%{
+    transform: rotate(360deg);
+  }
 }
 
+#spin-btn{
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  height: 26%;
+  width: 26%;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 0;
+  background: radial-gradient(#fdcf3b 50%, #d88a40 85%);
+  color: #c66e16;
+  text-transform: uppercase;
+  font-size: 1.8em;
+  letter-spacing: 0.1em;
+  font-weight: 600;
+}
 
+img{
+  position: absolute;
+  width:4em;
+  top: 45%;
+  right: -8%;
+}
+
+#final-value{
+  font-size: 1.5em;
+  text-align: center;
+  margin-top: 1.5em;
+  color: #202020;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 768px){
+  .wrapper{
+    font-size: 12px;
+  }
+  img{
+    right: -5%;
+  }
+}
