--- a/css/game.css
+++ b/css/game.css
@@ -20,7 +20,7 @@ body{
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  padding: 3em;
+  padding: 8em;
   border-radius: 1em;
   box-shadow: 0 4em 5em rgba(27,8,53, 0.2);
 }
@@ -84,4 +84,13 @@ img{
   img{
     right: -5%;
   }
+}
+
+.image1 {
+  position: relative;
+  top: 0;
+  right: 50;
+  inline-size: 15em;
+  inset-block-start: 45%;
+  inset-inline-end: -8%;
 }
